src/fonts/snapshots/laser_pdf__fonts__truetype__tests__test.snap
---
source: src/fonts/truetype.rs
expression: shaped_vec
snapshot_kind: text
---
[
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 37,
        text_range: 0..1,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 51,
        text_range: 1..2,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 69,
        text_range: 2..3,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 64,
        text_range: 3..4,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 55,
        text_range: 4..5,
        x_advance: 512,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 66,
        text_range: 5..6,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 55,
        text_range: 6..7,
        x_advance: 512,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 60,
        text_range: 7..8,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 53,
        text_range: 8..9,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 3,
        text_range: 9..10,
        x_advance: 384,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 65,
        text_range: 10..11,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 61,
        text_range: 11..12,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 52,
        text_range: 12..13,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 66,
        text_range: 13..14,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 69,
        text_range: 14..15,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 47,
        text_range: 15..16,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 64,
        text_range: 16..17,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 51,
        text_range: 17..18,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 3,
        text_range: 18..19,
        x_advance: 384,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 55,
        text_range: 19..20,
        x_advance: 512,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 60,
        text_range: 20..21,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 0,
        text_range: 21..22,
        x_advance: 1043,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 37,
        text_range: 22..23,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 67,
        text_range: 23..24,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 65,
        text_range: 24..25,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 66,
        text_range: 25..26,
        x_advance: 1024,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 8,
        text_range: 26..27,
        x_advance: 512,
        x_offset: 0,
        y_offset: 0,
        y_advance: 0,
    },
]
