src/fonts/snapshots/laser_pdf__fonts__truetype__tests__trailing_space.snap
---
source: src/fonts/truetype.rs
expression: shaped_vec
snapshot_kind: text
---
[
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 37,
        text_range: 0..1,
        x_advance_font: 1024,
        x_advance: 1024,
        x_offset: 0,
        y_advance: 0,
        y_offset: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 51,
        text_range: 1..2,
        x_advance_font: 1024,
        x_advance: 1024,
        x_offset: 0,
        y_advance: 0,
        y_offset: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 69,
        text_range: 2..3,
        x_advance_font: 1024,
        x_advance: 1024,
        x_offset: 0,
        y_advance: 0,
        y_offset: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 64,
        text_range: 3..4,
        x_advance_font: 1024,
        x_advance: 1024,
        x_offset: 0,
        y_advance: 0,
        y_offset: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 55,
        text_range: 4..5,
        x_advance_font: 512,
        x_advance: 512,
        x_offset: 0,
        y_advance: 0,
        y_offset: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 66,
        text_range: 5..6,
        x_advance_font: 1024,
        x_advance: 1024,
        x_offset: 0,
        y_advance: 0,
        y_offset: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 55,
        text_range: 6..7,
        x_advance_font: 512,
        x_advance: 512,
        x_offset: 0,
        y_advance: 0,
        y_offset: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 60,
        text_range: 7..8,
        x_advance_font: 1024,
        x_advance: 1024,
        x_offset: 0,
        y_advance: 0,
        y_offset: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 53,
        text_range: 8..9,
        x_advance_font: 1024,
        x_advance: 1024,
        x_offset: 0,
        y_advance: 0,
        y_offset: 0,
    },
    ShapedGlyph {
        unsafe_to_break: false,
        glyph_id: 3,
        text_range: 9..10,
        x_advance_font: 384,
        x_advance: 384,
        x_offset: 0,
        y_advance: 0,
        y_offset: 0,
    },
]
